[package]
name = "librarygrid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
flate2 = "1.0.28"
tar = "0.4.40"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
env_logger = "0.10.1"
flate2 = "1.0.28"
home = "0.5.5"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
tar = "0.4.40"
text_io = "0.1.12"
tokio = "1.34.0"
tokio-postgres = "0.7.10"
toml = "0.8.8"
